UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Description_for_SEER__c.field-meta.xml
<CustomField>
    <fullName>Description_for_SEER__c</fullName>
    <inlineHelpText>In detail please communicate to the best of your ability the scope of work this Lead will require when it converts to opportunity.</inlineHelpText>
    <label>Description for SEER</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>