UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DIAL_Customer__c.field-meta.xml
<CustomField>
    <fullName>DIAL_Customer__c</fullName>
    <label>DIAL Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>