UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Direct_Sales_Rev_Type_Cd__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_Rev_Type_Cd__c</fullName>
    <label>Direct Sales Rev Type Cd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>