UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Direct_Sales_Rev_Type_Ds__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_Rev_Type_Ds__c</fullName>
    <label>Direct Sales Rev Type Ds</label>
    <length>50</length>
    <type>Text</type>
</CustomField>