UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Disposition_Category__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Category__c</fullName>
    <label>Disposition Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Attempt Call</fullName>
            </value>
            <value>
                <fullName>2nd Attempt Call</fullName>
            </value>
            <value>
                <fullName>3rd Attempt Call</fullName>
            </value>
            <value>
                <fullName>Sale Opportunity</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Total Refusal</fullName>
            </value>
            <value>
                <fullName>Unworkable</fullName>
            </value>
            <value>
                <fullName>Non-Finalized Record</fullName>
            </value>
            <value>
                <fullName>Outside of FTR footprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>