UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Disposition_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Comments__c</fullName>
    <inlineHelpText>A minimum 2 sentence description of WHY the MQO or SAO was rejected.</inlineHelpText>
    <label>Disposition Comments</label>
    <type>TextArea</type>
</CustomField>