UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Distance_from_wire_center__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_wire_center__c</fullName>
    <inlineHelpText>Distance between the service address and the wire center.</inlineHelpText>
    <label>Distance from wire center</label>
    <length>55</length>
    <type>Text</type>
</CustomField>