UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DPI_Max_Internet_Speed__c.field-meta.xml
<CustomField>
    <fullName>DPI_Max_Internet_Speed__c</fullName>
    <description>DPI Max Internet Speed text field</description>
    <label>DPI Max Internet Speed</label>
    <length>200</length>
    <type>Text</type>
</CustomField>