UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DPI_PSACN__c.field-meta.xml
<CustomField>
    <fullName>DPI_PSACN__c</fullName>
    <description>SMB DPI_PSACN</description>
    <label>DPI PSACN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>