UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DW_Account_Join_Key__c.field-meta.xml
<CustomField>
    <fullName>DW_Account_Join_Key__c</fullName>
    <description>Data warehouse unique identifier.</description>
    <label>DW Account Join Key</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>