UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DW_Assignee__c.field-meta.xml
<CustomField>
    <fullName>DW_Assignee__c</fullName>
    <description>Data warehouse customer assignee.</description>
    <label>DW_Assignee</label>
    <length>25</length>
    <type>Text</type>
</CustomField>