UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DW_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>DW_Customer_Id__c</fullName>
    <description>Data warehouse customer number</description>
    <label>DW Customer Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>