UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Enterprise_Competition__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Competition__c</fullName>
    <description>Enterprise Competition Field Requested by Lee, Junewon</description>
    <label>Enterprise Competition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>