UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Enterprise_New_Business_Sales__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_New_Business_Sales__c</fullName>
    <description>Enterprise New Business/Sales Field Requested by Lee, Junewon</description>
    <label>Enterprise New Business/Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>