UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Enterprise_Product__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Product__c</fullName>
    <description>Enterprise Product Field Requested by Lee, Junewon</description>
    <label>Enterprise Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>