UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Enterprise_Residential_VS_Business__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Residential_VS_Business__c</fullName>
    <description>Enterprise (Residential VS. Business) Field Requested by Lee, Junewon</description>
    <label>Enterprise (Residential VS. Business)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>