UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>