UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/equipmentProtection__c.field-meta.xml
<CustomField>
    <fullName>equipmentProtection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Protection</label>
    <type>Checkbox</type>
</CustomField>