UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Estimated_Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Pipeline_Value__c</fullName>
    <inlineHelpText>Amount of budget available</inlineHelpText>
    <label>Estimated Pipeline Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>