UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Expiration_of_Competitor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Expiration_of_Competitor_Agreement__c</fullName>
    <description>Best estimate of competitors contract expiration</description>
    <label>Expiration of Competitor Agreement</label>
    <type>Date</type>
</CustomField>