UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/familyPackage__c.field-meta.xml
<CustomField>
    <fullName>familyPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Package</label>
    <type>Checkbox</type>
</CustomField>