UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Feature_Pack_Customer__c.field-meta.xml
<CustomField>
    <fullName>Feature_Pack_Customer__c</fullName>
    <description>Does this customer currently have a feature package with Frontier?</description>
    <label>Feature Pack Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>