UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/FiberExp_ActualOFS_Date__c.field-meta.xml
<CustomField>
    <fullName>FiberExp_ActualOFS_Date__c</fullName>
    <description>SMB FiberExp_ActualOFS_Dte</description>
    <label>FiberExp ActualOFS Date</label>
    <type>Date</type>
</CustomField>