UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/FiberExp_EstimatedOFS_Date__c.field-meta.xml
<CustomField>
    <fullName>FiberExp_EstimatedOFS_Date__c</fullName>
    <description>SMB FiberExp_EstimatedOFS_Dte field</description>
    <label>FiberExp EstimatedOFS Date</label>
    <type>Date</type>
</CustomField>