UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/FiberExp_Ind__c.field-meta.xml
<CustomField>
    <fullName>FiberExp_Ind__c</fullName>
    <description>SMB FiberExp_Ind field</description>
    <label>FiberExp Ind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>