UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/FiOS_Fiber_Internet_Capable__c.field-meta.xml
<CustomField>
    <fullName>FiOS_Fiber_Internet_Capable__c</fullName>
    <description>FiOS/Fiber Internet Capable picklist value</description>
    <label>Fiber Optic Internet Capable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>