UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/First_Web_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Web_Response__c</fullName>
    <label>First Web Response</label>
    <type>Url</type>
</CustomField>