UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Follow_Up_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Appt_Date__c</fullName>
    <label>Follow Up Appt Date</label>
    <type>Date</type>
</CustomField>