UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Follow_Up_Appt_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Appt_Time__c</fullName>
    <label>Follow Up Appt Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>