UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Frontier_Secure__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Secure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Frontier Secure SMB</description>
    <label>Frontier Secure</label>
    <type>Checkbox</type>
</CustomField>