UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Frontier_Secure_Currency__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Secure_Currency__c</fullName>
    <description>Frontier Secure Currency</description>
    <label>Frontier Secure MRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>