UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Frontier_Secure_QTY__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Secure_QTY__c</fullName>
    <description>Frontier Secure SMB QTY</description>
    <label>Frontier Secure QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>