UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/GL_GRP_2__c.field-meta.xml
<CustomField>
    <fullName>GL_GRP_2__c</fullName>
    <label>GL GRP 2</label>
    <length>125</length>
    <type>Text</type>
</CustomField>