UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Gl_Matrix_No__c.field-meta.xml
<CustomField>
    <fullName>Gl_Matrix_No__c</fullName>
    <label>Gl Matrix No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>