UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Global_Ultimate_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_DUNS_Number__c</fullName>
    <label>Global Ultimate DUNS Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>