UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Good_Creditr__c.field-meta.xml
<CustomField>
    <fullName>Good_Creditr__c</fullName>
    <description>Does this customer have good credit (Frontier rating).</description>
    <label>Good_Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>