UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Google_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Click_ID__c</fullName>
    <description>Google Click ID Field Requested by Lee, Junewon</description>
    <label>Google Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>