UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/HSI_Lines_Replaced__c.field-meta.xml
<CustomField>
    <fullName>HSI_Lines_Replaced__c</fullName>
    <label>HSI Lines Replaced</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>