UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/integrate_leadId__c.field-meta.xml
<CustomField>
    <fullName>integrate_leadId__c</fullName>
    <description>For Salesstaff leads</description>
    <label>integrate_leadId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>