UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/INTERLATA_CZN_IND__c.field-meta.xml
<CustomField>
    <fullName>INTERLATA_CZN_IND__c</fullName>
    <label>&apos;INTERLATA_CZN_IND</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>