UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/internationalCalling__c.field-meta.xml
<CustomField>
    <fullName>internationalCalling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Calling</label>
    <type>Checkbox</type>
</CustomField>