UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/internetService__c.field-meta.xml
<CustomField>
    <fullName>internetService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internet Service</label>
    <type>Checkbox</type>
</CustomField>