UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Invoca_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoca_Media_Type__c</fullName>
    <description>Customer Business Object Value 0</description>
    <label>Invoca Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>