UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Is_48_Hour_rule_applied__c.field-meta.xml
<CustomField>
    <fullName>Is_48_Hour_rule_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 48 Hour rule applied</label>
    <type>Checkbox</type>
</CustomField>