UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Is_this_a_new_construction__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_new_construction__c</fullName>
    <description>ClearLink Is this a new construction Field</description>
    <label>Is this a new construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>