UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/IT_Spend__c.field-meta.xml
<CustomField>
    <fullName>IT_Spend__c</fullName>
    <description>Amount company spends on IT</description>
    <label>IT Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>