UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Last_Campaign_Response_Detail__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Response_Detail__c</fullName>
    <label>Last Campaign Response Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>