UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Last_Modified_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Id__c</fullName>
    <formula>CASESAFEID( LastModifiedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Id</label>
    <type>Text</type>
</CustomField>