UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LATA__c.field-meta.xml
<CustomField>
    <fullName>LATA__c</fullName>
    <description>D&amp;B Field</description>
    <label>LATA</label>
    <length>3</length>
    <type>Text</type>
</CustomField>