UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LBI__EstimatedRevenue__c.field-meta.xml
<CustomField>
    <fullName>LBI__EstimatedRevenue__c</fullName>
    <formula>LBI__Recommendation__r.LBI__MonetaryValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>