UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LBI__LatticeRating__c.field-meta.xml
<CustomField>
    <fullName>LBI__LatticeRating__c</fullName>
    <description>Value of Rating field from associated Recommendation record.</description>
    <formula>LBI__Recommendation__r.LBI__Rank__c</formula>
    <inlineHelpText>Value of Rating field from associated Recommendation record.</inlineHelpText>
    <label>Lattice Recommendation Rating</label>
    <type>Text</type>
</CustomField>