UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LBI__LatticeScore__c.field-meta.xml
<CustomField>
    <fullName>LBI__LatticeScore__c</fullName>
    <description>Value of Score field from associated Recommendation record.</description>
    <formula>LBI__Recommendation__r.LBI__Likelihood__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of Score field from associated Recommendation record.</inlineHelpText>
    <label>Lattice Recommendation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>