UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LBI__Recommendation__c.field-meta.xml
<CustomField>
    <fullName>LBI__Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommendation</label>
    <referenceTo>LBI__Recommendation__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>