UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LDR_Assigned__c.field-meta.xml
<CustomField>
    <fullName>LDR_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDR Assigned</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.profileName__c</field>
            <operation>equals</operation>
            <value>Lead Development Rep (LDR), #CTF Customer Service Analyst - Sales Insight</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>