UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/LDR_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>LDR_Assigned_Date__c</fullName>
    <description>Date lead was assigned to a lead development rep.</description>
    <label>LDR Assigned Date</label>
    <type>Date</type>
</CustomField>