UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_Lead_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>