UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Owner_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Assignment_Date__c</fullName>
    <label>Lead Owner Assignment Date</label>
    <type>Date</type>
</CustomField>