UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Owner_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_s_Manager_Email__c</fullName>
    <label>Lead Owner&apos;s Manager Email</label>
    <type>Email</type>
</CustomField>