UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Product_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product_List__c</fullName>
    <description>Setup new Pick List Field for the Marketo Leads</description>
    <label>Lead Product List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud IT</fullName>
            </value>
            <value>
                <fullName>Connect Cloud</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>FAW UCaaS</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>FiOS or BHSI</fullName>
                <label>FiberOptic or BHSI</label>
            </value>
            <value>
                <fullName>Managed WiFi</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Ring Central</fullName>
            </value>
            <value>
                <fullName>SD-WAN</fullName>
            </value>
            <value>
                <fullName>Simply WiFi Secure</fullName>
            </value>
            <value>
                <fullName>SIP Trunking</fullName>
            </value>
            <value>
                <fullName>Smart Voice</fullName>
            </value>
            <value>
                <fullName>Voice (TDM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>