UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Lead_Scoring__c</fullName>
    <description>Lead Scoring SMB OTM</description>
    <label>Lead Scoring</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>