UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Scrub_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Scrub_Date__c</fullName>
    <description>Lead Scrub Date Field</description>
    <label>Lead Scrub Date</label>
    <type>Date</type>
</CustomField>