UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Segment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment__c</fullName>
    <description>Lead Segment</description>
    <label>Lead Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>