UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <inlineHelpText>Lead Stages (updated 5/24) are: Known&gt;MQL&gt;Evaluating&gt;Validating&gt;Decision&gt;Closed/Won
Detours: Recycled, Disqualified, Lost</inlineHelpText>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Known</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Closed/Won</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
                <color>#AFCADF</color>
                <label>Recycled</label>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Sent To LDR</fullName>
                <default>true</default>
                <label>Sent To LDR</label>
            </value>
            <value>
                <fullName>Evaluating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>