UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lead_Status_changed_to_Qualified_date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_changed_to_Qualified_date__c</fullName>
    <description>This field is used by process builder to capture and ultimately count the number of days each Lead is in certain Status values.</description>
    <label>Lead Status changed to Qualified date</label>
    <type>Date</type>
</CustomField>