UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Legal_Street__c.field-meta.xml
<CustomField>
    <fullName>Legal_Street__c</fullName>
    <formula>Street_Number__c +&apos; &apos;+ Street_Name__c +&apos; &apos;+ Street_Subtitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Street</label>
    <type>Text</type>
</CustomField>