UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Lit_Building__c.field-meta.xml
<CustomField>
    <fullName>Lit_Building__c</fullName>
    <description>Lit Building picklist value</description>
    <label>Lit Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>