UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Local_Area_Market__c.field-meta.xml
<CustomField>
    <fullName>Local_Area_Market__c</fullName>
    <description>Customer exchange area.</description>
    <label>Local Area Market</label>
    <length>25</length>
    <type>Text</type>
</CustomField>