UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Location_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Location_Attribute__c</fullName>
    <label>Location Attribute</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HBE Enabled</fullName>
            </value>
            <value>
                <fullName>Commercial Lit Ready</fullName>
            </value>
            <value>
                <fullName>100 Feet</fullName>
            </value>
            <value>
                <fullName>500 Feet</fullName>
            </value>
            <value>
                <fullName>1000 Feet</fullName>
            </value>
            <value>
                <fullName>2000 Feet</fullName>
            </value>
            <value>
                <fullName>&gt;2000 Feet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 