UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <inlineHelpText>HQ, Remote, Retail, Etc</inlineHelpText>
    <label>Location Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>