UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/longDistance__c.field-meta.xml
<CustomField>
    <fullName>longDistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long Distance</label>
    <type>Checkbox</type>
</CustomField>